[package]
name = "linkage_cli"
version = "0.1.0"
authors = ["Benedikt <benediktb11@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkage_leaks = { path = "../linkage_leaks" }
linkage_firewall = { path = "../linkage_firewall" }

clap = "2.33.3"
ovpnfile = "0.1.2"
libc = "0.2.86"