[package]
name = "linkage_cli"
version = "0.0.1"
authors = ["Benedikt <benediktb11@tuta.io>", "ravi0li <mail@moritz.pw>"]
edition = "2018"
license = "AGPL-3.0-only"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkage_leaks = { path = "../linkage_leaks" }
linkage_firewall = { path = "../linkage_firewall" }

thiserror = "1.0.23"
clap = "2.33.3"
ovpnfile = "0.1.2"
ctrlc = "3.1.7"
regex = "1.4.3"
colored = "2.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.86"

[target.'cfg(windows)'.dependencies]
# For Admin checking permissions on Windows
is_elevated = "0.1.2"