[package]
name = "linkage_config"
version = "0.3.0"
authors = ["Benedikt <benediktb11@tuta.io>", "ravi0li <mail@moritz.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkage_firewall = { path = "../linkage_firewall" }
toml = "0.5.8"
serde = { version = "1.0.123", features = ["derive"] }
home = "0.5.3"
thiserror = "1.0.23"