[package]
name = "linkage_firewall"
version = "0.0.1"
authors = ["ravi0li <mail@moritz.pw>"]
edition = "2018"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
mockall = "0.9.1"
