[package]
name = "linkage_gui"
version = "0.1.0"
authors = ["benedikt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkage_cli = { path = "../linkage_cli" }
linkage_firewall = { path = "../linkage_firewall" }
linkage_config = { path = "../linkage_config" }
eframe = "0.12.0"
native-dialog = "0.5.5"
clap = "2.33.3"