[package]
name = "linkage_leaks"
version = "0.2.0"
authors = ["Benedikt <benediktb11@tuta.io>", "ravi0li <mail@moritz.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
random-string = "0.1.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
thiserror = "1.0.23"
lazy_static = "1.4.0"